feat: Initial implementation
Signed-off-by: dankeboy36 <dankeboy36@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         node: [18.x]
     runs-on: ${{ matrix.os }}
     steps:
@@ -26,50 +26,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.config.node }}
-      - name: Use Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - name: Restore CLI Binaries
-        uses: actions/cache/restore@v3
-        with:
-          path: test-resources/cli-releases
-          key: ${{ runner.os }}-cli-context-${{ hashFiles('src/test/cliContext.json') }}
-      - name: Restore `directories.data` folder (CLI)
-        uses: actions/cache/restore@v3
-        with:
-          path: test-resources/envs/cli
-          key: ${{ runner.os }}-cli-env-${{ hashFiles('src/test/envs.cli.json') }}
-      - name: Restore `directories.data` folder (Git)
-        uses: actions/cache/restore@v3
-        with:
-          path: test-resources/envs/git
-          key: ${{ runner.os }}-git-env-${{ hashFiles('src/test/envs.git.json') }}
       - name: Install Dependencies
         run: npm ci
       - name: Check Format
         run: npm run format && git diff --exit-code
+      - name: Lint
+        run: npm run lint
       - name: Test
-        uses: coactions/setup-xvfb@v1
-        with:
-          run: npm run test-all
+        run: npm test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Store CLI Binaries
-        uses: actions/cache/save@v3
-        with:
-          path: test-resources/cli-releases
-          key: ${{ runner.os }}-cli-context-${{ hashFiles('src/test/cliContext.json') }}
-      - name: Store `directories.data` folder (CLI)
-        uses: actions/cache/save@v3
-        with:
-          path: test-resources/envs/cli
-          key: ${{ runner.os }}-cli-env-${{ hashFiles('src/test/envs.cli.json') }}
-      - name: Store `directories.data` folder (Git)
-        uses: actions/cache/save@v3
-        with:
-          path: test-resources/envs/git
-          key: ${{ runner.os }}-git-env-${{ hashFiles('src/test/envs.git.json') }}
 
   release:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -93,6 +59,5 @@ jobs:
         run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.ADMIN_TOKEN }}
-          OVSX_PAT: ${{ secrets.OVSX_PAT }}
     outputs:
       release_version: ${{ steps.release.outputs.release_version }}
