--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
   "files.exclude": {
-    "out": false,
     "dist": false
   },
   "search.exclude": {
-    "out": true,
-    "dist": true
+    "dist": false
   },
   "typescript.tsc.autoDetect": "off",
   "typescript.tsdk": "./node_modules/typescript/lib",
