--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-out
+.DS_Store
 dist
 node_modules
-.vscode-test
-*.vsix
-# binary releases of the Arduino CLI for testing and the `directories.data` folder for the tests
-test-resources
+.nyc_output
