--- a/package.json
+++ b/package.json
@@ -1,61 +1,35 @@
 {
-  "name": "esp-exception-decoder",
-  "displayName": "ESP Exception Decoder",
-  "description": "ESP8266/ESP32 Exception Decoder Extension for the Arduino IDE",
-  "version": "1.0.2",
   "private": true,
-  "engines": {
-    "vscode": "^1.78.0"
-  },
-  "author": "dankeboy36",
-  "publisher": "dankeboy36",
+  "name": "fqbn",
+  "version": "1.0.0",
+  "description": "Arduino FQBN (fully qualified board name)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dankeboy36/esp-exception-decoder/issues"
-  },
+  "author": "dankeboy36",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dankeboy36/esp-exception-decoder.git"
+    "url": "https://github.com/dankeboy36/fqbn.git"
   },
-  "categories": [
-    "Other"
-  ],
-  "keywords": [
-    "arduino-ide",
-    "vscode-extension",
-    "esp8266-arduino",
-    "esp32-arduino"
-  ],
-  "activationEvents": [
-    "onStartupFinished"
-  ],
-  "main": "./dist/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "espExceptionDecoder.showTerminal",
-        "title": "Show Decoder Terminal",
-        "category": "ESP Exception Decoder"
-      }
-    ]
+  "bugs": {
+    "url": "https://github.com/dankeboy36/fqbn/issues"
   },
+  "main": "./dist/index.js",
+  "files": [
+    "dist",
+    "!/**/__tests__"
+  ],
   "scripts": {
-    "compile": "webpack && vsce package",
-    "watch": "webpack --watch",
     "prebuild": "rimraf dist",
-    "build": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js",
-    "pretest-slow": "npm run pretest",
-    "test-slow": "node ./out/test/runTest.js --slow",
-    "pretest-all": "npm run pretest",
-    "test-all": "node ./out/test/runTest.js --all",
+    "build": "tsc -p ./",
+    "format": "prettier --write . && prettier-package-json --write ./package.json",
     "lint": "eslint src --ext ts",
-    "format": "prettier --write .",
-    "clean": "rimraf dist out *.vsix",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "test": "nyc mocha",
+    "watch": "tsc -p ./ -w"
+  },
+  "dependencies": {
+    "ardunno-cli": "^0.1.7",
+    "clone": "^2.1.2",
+    "deep-equal": "^2.2.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
@@ -65,36 +39,29 @@
     "@semantic-release/github": "^9.0.3",
     "@semantic-release/npm": "^10.0.4",
     "@semantic-release/release-notes-generator": "^11.0.3",
-    "@types/debug": "^4.1.8",
-    "@types/glob": "^8.1.0",
+    "@types/clone": "^2.1.4",
+    "@types/deep-equal": "^1.0.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/temp": "^0.9.1",
-    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
-    "@vscode/test-electron": "^2.3.0",
-    "@vscode/vsce": "^2.19.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "glob": "^8.1.0",
-    "install-from-gh-to-vscode": "^0.1.0-beta.8",
     "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.7.1",
+    "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.0.5",
     "semantic-release-vsce": "^5.6.0",
-    "semver": "^7.5.1",
-    "temp": "^0.9.4",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
-  "dependencies": {
-    "debug": "^4.3.4",
-    "execa": "^7.1.1",
-    "vscode-arduino-api": "^0.1.2"
-  }
+  "keywords": [
+    "arduino",
+    "fqbn"
+  ]
 }
