--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "Node16",
     "moduleResolution": "node16",
     "target": "ES2020",
-    "outDir": "out",
+    "outDir": "dist",
     "lib": ["ES2020"],
     "sourceMap": true,
     "rootDir": "src",
