--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,5 +59,6 @@ jobs:
         run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.ADMIN_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     outputs:
       release_version: ${{ steps.release.outputs.release_version }}
