fix: missing typing info
Signed-off-by: dankeboy36 <dankeboy36@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "nyc mocha",
     "watch": "tsc -p ./ -w"
   },
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "ardunno-cli": "^0.1.7",
     "clone": "^2.1.2",
