--- a/package.json
+++ b/package.json
@@ -2,32 +2,37 @@
   "name": "fqbn",
   "version": "1.0.5",
   "description": "Arduino FQBN (fully qualified board name)",
-  "license": "MIT",
-  "author": "dankeboy36",
+  "keywords": [
+    "arduino",
+    "fqbn"
+  ],
+  "bugs": {
+    "url": "https://github.com/dankeboy36/fqbn/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dankeboy36/fqbn.git"
   },
-  "bugs": {
-    "url": "https://github.com/dankeboy36/fqbn/issues"
-  },
+  "license": "MIT",
+  "author": "dankeboy36",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "!/**/__tests__"
+    "!/**/__tests__",
+    "!/**/__examples__"
   ],
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p ./",
-    "format": "prettier --write . && prettier-package-json --write ./package.json",
+    "format": "prettier --write .",
     "lint": "eslint src --ext ts",
     "release": "semantic-release",
     "test": "nyc mocha",
+    "typedoc": "typedoc ./src/index.ts && concat-md ./docs > README.md && prettier --write ./docs && prettier --write ./README.md",
     "watch": "tsc -p ./ -w"
   },
-  "types": "./dist/index.d.ts",
   "dependencies": {
-    "ardunno-cli": "^0.1.7",
     "clone": "^2.1.2",
     "deep-equal": "^2.2.3"
   },
@@ -46,22 +51,22 @@
     "@types/temp": "^0.9.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "ardunno-cli": "^0.1.7",
+    "concat-md": "^0.5.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
-    "prettier-package-json": "^2.8.0",
+    "prettier-plugin-packagejson": "^2.4.12",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.0.5",
     "semantic-release-vsce": "^5.6.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.25.9",
+    "typedoc-plugin-markdown": "^3.11.14",
     "typescript": "^5.0.4"
-  },
-  "keywords": [
-    "arduino",
-    "fqbn"
-  ]
+  }
 }
