fix: assert API doc on the CI
Signed-off-by: dankeboy36 <dankeboy36@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p ./",
+    "docs": "typedoc ./src/index.ts && concat-md ./docs > README.md && prettier --write ./docs && prettier --write ./README.md",
     "format": "prettier --write .",
     "lint": "eslint src --ext ts",
     "release": "semantic-release",
     "test": "nyc mocha",
-    "typedoc": "typedoc ./src/index.ts && concat-md ./docs > README.md && prettier --write ./docs && prettier --write ./README.md",
     "watch": "tsc -p ./ -w"
   },
   "dependencies": {
