--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
         run: npm ci
       - name: Check Format
         run: npm run format && git diff --exit-code
+      - name: Check API Documentation
+        run: npm run docs && git diff --exit-code
       - name: Lint
         run: npm run lint
       - name: Test
