--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p ./",
-    "docs": "typedoc ./src/index.ts && concat-md ./docs > README.md && prettier --write ./docs && prettier --write ./README.md",
+    "docs": "typedoc ./src/index.ts && concat-md ./docs > README.md && prettier --write ./docs && rimraf ./docs/api && prettier --write ./README.md",
     "format": "prettier --write .",
     "lint": "eslint src --ext ts",
     "release": "semantic-release",
