--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "!/**/__examples__"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf ./dist",
     "build": "tsc -p ./",
-    "docs": "typedoc ./src/index.ts && concat-md ./docs > README.md && prettier --write ./docs && rimraf ./docs/api && prettier --write ./README.md",
+    "docs": "typedoc ./src/index.ts && concat-md ./docs/api > ./README.md && rimraf ./docs/api && prettier --write ./README.md",
     "format": "prettier --write .",
     "lint": "eslint src --ext ts",
     "release": "semantic-release",
