--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,8 @@
-name: Build
+name: CI
+permissions:
+  contents: read
+  pull-requests: write
+
 on:
   push:
     branches:
@@ -15,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        node: [20.x]
+        node: [20.x, 22.x]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -51,16 +55,23 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 20.x
+          node-version: 22.x
       - name: Install Dependencies
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Load secrets from 1Password
+        id: load_secrets
+        uses: 1password/load-secrets-action@v3
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          GITHUB_TOKEN: op://cicd_dankeboy36/GITHUB_TOKEN/credential
+          NPM_TOKEN: op://cicd_dankeboy36/NPM_TOKEN/credential
       - name: Release
         id: release
         run: npm run release
         env:
-          GITHUB_TOKEN: ${{ secrets.ADMIN_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.load_secrets.outputs.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ steps.load_secrets.outputs.NPM_TOKEN }}
     outputs:
       release_version: ${{ steps.release.outputs.release_version }}
